--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "coc-player-lookup",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {},
-  "dependencies": {}
+  "name": "JKTripuri",
+  "trophies": 5678,
+  "clan": {
+    "name": "The Legends"
+  }
 }
